tests/baselines/reference/witness(strict=true).errors.txt
witness.ts(2,5): error TS7022: 'varInit' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
witness.ts(4,13): error TS7022: 'pInit' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
witness.ts(4,21): error TS2372: Parameter 'pInit' cannot reference itself.
witness.ts(8,5): error TS7022: 'x' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
witness.ts(8,14): error TS2729: Property 'x' is used before its initialization.
witness.ts(20,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'a' must be of type 'any', but here has type 'never'.
witness.ts(28,5): error TS7022: 'co1' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
witness.ts(28,12): error TS2695: Left side of comma operator is unused and has no side effects.
witness.ts(29,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'co1' must be of type 'any', but here has type 'number'.
witness.ts(30,5): error TS7022: 'co2' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
witness.ts(30,12): error TS2695: Left side of comma operator is unused and has no side effects.
witness.ts(30,12): error TS2695: Left side of comma operator is unused and has no side effects.
witness.ts(32,5): error TS7022: 'co3' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
witness.ts(32,12): error TS2695: Left side of comma operator is unused and has no side effects.
witness.ts(32,12): error TS2695: Left side of comma operator is unused and has no side effects.
witness.ts(32,12): error TS2695: Left side of comma operator is unused and has no side effects.
witness.ts(33,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'co3' must be of type 'any', but here has type 'number'.
witness.ts(36,5): error TS7022: 'as1' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
witness.ts(37,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'as1' must be of type 'any', but here has type 'number'.
witness.ts(38,5): error TS7022: 'as2' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
witness.ts(39,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'as2' must be of type 'any', but here has type 'number'.
witness.ts(42,5): error TS7022: 'cnd1' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
witness.ts(43,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'cnd1' must be of type 'any', but here has type 'number'.
witness.ts(48,5): error TS7022: 'or1' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
witness.ts(50,5): error TS7022: 'or2' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
witness.ts(52,5): error TS7022: 'or3' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
witness.ts(56,5): error TS7022: 'and1' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
witness.ts(57,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'and1' must be of type 'any', but here has type 'string'.
witness.ts(58,5): error TS7022: 'and2' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
witness.ts(60,5): error TS7022: 'and3' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
witness.ts(68,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'fnCallResult' must be of type 'never', but here has type 'any'.
witness.ts(76,10): error TS2394: This overload signature is not compatible with its implementation signature.
witness.ts(88,5): error TS7023: 'fn1' implicitly has return type 'any' because it does not have a return type annotation and is referenced directly or indirectly in one of its return expressions.
witness.ts(91,5): error TS7023: 'fn2' implicitly has return type 'any' because it does not have a return type annotation and is referenced directly or indirectly in one of its return expressions.
witness.ts(95,20): error TS7006: Parameter 'x' implicitly has an 'any' type.
witness.ts(96,20): error TS2454: Variable 'a' is used before being assigned.
witness.ts(101,17): error TS7006: Parameter 'x' implicitly has an 'any' type.
witness.ts(102,16): error TS2454: Variable 'a' is used before being assigned.
witness.ts(107,5): error TS7022: 'propAcc1' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
witness.ts(110,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'propAcc1' must be of type 'any', but here has type '{ m: any; }'.
witness.ts(114,16): error TS7022: 'x' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
witness.ts(121,5): error TS7022: 'n' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
witness.ts(121,14): error TS2729: Property 'n' is used before its initialization.
witness.ts(128,12): error TS7022: 'q' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
witness.ts(128,19): error TS2729: Property 'q' is used before its initialization.


==== witness.ts (45 errors) ====
    // Initializers
    var varInit = varInit; // any
        ~~~~~~~
!!! error TS7022: 'varInit' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
    var pInit: any;
    function fn(pInit = pInit) {
                ~~~~~~~~~~~~~
!!! error TS7022: 'pInit' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
                        ~~~~~
!!! error TS2372: Parameter 'pInit' cannot reference itself.
        var pInit: any;
    }
    class InitClass {
        x = this.x;
        ~
!!! error TS7022: 'x' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
                 ~
!!! error TS2729: Property 'x' is used before its initialization.
!!! related TS2728 witness.ts:8:5: 'x' is declared here.
        fn() {
            var y = this.x;
            var y: any;
        }
    }
    
    // Return type
    function fnReturn1() {
        return fnReturn1();
    }
    var a: any;
    var a = fnReturn1();
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'a' must be of type 'any', but here has type 'never'.
!!! related TS6203 witness.ts:19:5: 'a' was also declared here.
    
    function fnReturn2() {
        return fnReturn2;
    }
    var fnr2: () => any = fnReturn2();
    
    // Comma
    var co1 = (co1, 3);
        ~~~
!!! error TS7022: 'co1' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
               ~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
    var co1: number;
        ~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'co1' must be of type 'any', but here has type 'number'.
!!! related TS6203 witness.ts:28:5: 'co1' was also declared here.
    var co2 = (3, 4, co2);
        ~~~
!!! error TS7022: 'co2' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
               ~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
               ~~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
    var co2: any;
    var co3 = (co1, co2, co3, co1);
        ~~~
!!! error TS7022: 'co3' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
               ~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
               ~~~~~~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
               ~~~~~~~~~~~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
    var co3: number;
        ~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'co3' must be of type 'any', but here has type 'number'.
!!! related TS6203 witness.ts:32:5: 'co3' was also declared here.
    
    // Assignment
    var as1 = (as1 = 2);
        ~~~
!!! error TS7022: 'as1' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
    var as1: number;
        ~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'as1' must be of type 'any', but here has type 'number'.
!!! related TS6203 witness.ts:36:5: 'as1' was also declared here.
    var as2 = (as2 = as2 = 2);
        ~~~
!!! error TS7022: 'as2' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
    var as2: number;
        ~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'as2' must be of type 'any', but here has type 'number'.
!!! related TS6203 witness.ts:38:5: 'as2' was also declared here.
    
    // Conditional
    var cnd1 = cnd1 ? 0 : 1;
        ~~~~
!!! error TS7022: 'cnd1' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
    var cnd1: number;
        ~~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'cnd1' must be of type 'any', but here has type 'number'.
!!! related TS6203 witness.ts:42:5: 'cnd1' was also declared here.
    var cnd2 = cnd1 ? cnd1 ? '' : "" : '';
    var cnd2: string;
    
    // ||
    var or1 = or1 || '';
        ~~~
!!! error TS7022: 'or1' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
    var or1: any;
    var or2 = '' || or2;
        ~~~
!!! error TS7022: 'or2' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
    var or2: any;
    var or3 = or3 || or3;
        ~~~
!!! error TS7022: 'or3' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
    var or3: any;
    
    // &&
    var and1 = and1 && '';
        ~~~~
!!! error TS7022: 'and1' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
    var and1: string;
        ~~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'and1' must be of type 'any', but here has type 'string'.
!!! related TS6203 witness.ts:56:5: 'and1' was also declared here.
    var and2 = '' && and2;
        ~~~~
!!! error TS7022: 'and2' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
    var and2: any;
    var and3 = and3 && and3;
        ~~~~
!!! error TS7022: 'and3' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
    var and3: any;
    
    // function call return type
    function fnCall() {
        return fnCall();
    }
    var fnCallResult = fnCall();
    var fnCallResult: any;
        ~~~~~~~~~~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'fnCallResult' must be of type 'never', but here has type 'any'.
!!! related TS6203 witness.ts:67:5: 'fnCallResult' was also declared here.
    
    // Call argument
    function fnArg1(x: typeof fnArg1, y: number) {
        var x: (n: typeof fnArg1, m: number) => void;
        fnArg1(fnArg1, 0);
    }
    
    function overload1(x: (n: string) => string): string;
             ~~~~~~~~~
!!! error TS2394: This overload signature is not compatible with its implementation signature.
!!! related TS2750 witness.ts:79:10: The implementation signature is declared here.
    function overload1(x: (n: number) => number): number;
    function overload1(x: (n: any) => any): any;
    function overload1() { return undefined; };
    
    function fnArg2() {
        return overload1(fnArg2);
    }
    var t = fnArg2(); // t: should be 'any', but is 'string'
    
    // New operator
    class C {
        fn1() {
        ~~~
!!! error TS7023: 'fn1' implicitly has return type 'any' because it does not have a return type annotation and is referenced directly or indirectly in one of its return expressions.
            return new (this.fn1())();
        }
        fn2() {
        ~~~
!!! error TS7023: 'fn2' implicitly has return type 'any' because it does not have a return type annotation and is referenced directly or indirectly in one of its return expressions.
            return new (this.fn2());
        }
        fn3() {
            var a: new(x) => number;
                       ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
            return new a(this.fn3);
                       ~
!!! error TS2454: Variable 'a' is used before being assigned.
        }
    }
    
    function fn5() {
        var a: new (x) => number;
                    ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        return new a(fn5);
                   ~
!!! error TS2454: Variable 'a' is used before being assigned.
    }
    var fn5r = fn5(); // fn5r: should be 'any', but is 'number'
    
    // Property access
    var propAcc1 = {
        ~~~~~~~~
!!! error TS7022: 'propAcc1' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
        m: propAcc1.m
    };
    var propAcc1: { m: any; }
        ~~~~~~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'propAcc1' must be of type 'any', but here has type '{ m: any; }'.
!!! related TS6203 witness.ts:107:5: 'propAcc1' was also declared here.
    
    // Property access of module member
    module M2 {
        export var x = M2.x;
                   ~
!!! error TS7022: 'x' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
        var y = x;
        var y: any;
    }
    
    // Property access of class instance type
    class C2 {
        n = this.n; // n: any
        ~
!!! error TS7022: 'n' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
                 ~
!!! error TS2729: Property 'n' is used before its initialization.
!!! related TS2728 witness.ts:121:5: 'n' is declared here.
    }
    var c2inst = new C2().n;
    var c2inst: any;
    
    // Constructor function property access
    class C3 {
        static q = C3.q;
               ~
!!! error TS7022: 'q' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
                      ~
!!! error TS2729: Property 'q' is used before its initialization.
!!! related TS2728 witness.ts:128:12: 'q' is declared here.
    }
    var qq = C3.q;
    var qq: any;
    
    // Parentheses - tested a bunch above
    
    
    